Small layout bug fix

--- a/src/views/LoginView/LoginView.scss
+++ b/src/views/LoginView/LoginView.scss
@@ -1,28 +1,31 @@
 #main-img {
-    display: block;
+    display: flex;
     margin: 8px auto;
     width: 50%;
     flex: 1;
 }
+
 #outer {
-    position: relative;
-    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
 }
-#outer > div {
-    vertical-align: middle;
+
+#outer>div {
     text-align: center;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    min-width: 300px;
+    margin: 0 auto 0 auto;
+    display: table;
 }
+
 #options-list {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 8px;
-    min-width: 650px;
+    margin: 0px 12px;
+}
+
+:global(#options-list > *) {
+    flex: 1;
 }
